--- a/lifetrack.client/src/pages/Patient.css
+++ b/lifetrack.client/src/pages/Patient.css
@@ -1,23 +1,34 @@
 .info_pat
 {
     width: 99vw;
-    height: 27vh;
-    background-color: #13D8E4;
+    height: 60vh;
+    background-color: lightcyan;
+    color: darkcyan;
 }
 
 .info_data
 {
     width: 99vw;
     height: 61vh;
-    background-color: #13D8E4;
+    background-color: lightcyan;
     margin-top: 9px;
 }
 
-.name_patient
-{
-    margin-top: 3px;
-    margin-bottom: 0px;
-    color: white;
+.links {
+    margin-inline: auto;
+    margin-top: 10px;
+    color: lightcyan;
+    font-family: Georgia, serif;
+    font-size: 30px;
+    font-style: italic;
+    cursor: pointer;
+}
+
+.name_patient {
+    margin: 10px;
+    padding: 10px;
+    color: darkcyan;
+   /* float: left;*/
 }
 
 .place_patient
@@ -41,10 +52,16 @@
     width: 50vw;
 }
 
-.info_pat_str
-{
-    color: white;
-    margin-left: 3px;
+.info_pat_str {
+    color: black;
+    margin: 10px;
+    padding: 10px;
+    font-size: 24px;
+}
+
+#strategy{
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .flex_pat_info
@@ -52,58 +69,11 @@
     display: flex;
 }
 
-.strategy_button
-{
-    width: 150px;
-    height:30px;
-    background-color: #13B2BC;
-    font-weight:bolder;
-    font-family:Verdana, sans-serif;
-    font-size: 20px;
-    color:white;
-    border-radius: 50px;
-    border: 0;
-}
-
-.last_indexes
-{
-    color: white;
-    margin-top: 0;
-    margin-bottom: 3px;
-}
-
-.indexes_table
-{
-    width: 99vw;
-    margin-bottom: 0px;
-}
-
-.indexes_table_td
-{
-    font-weight:500;
-    font-family:Verdana, sans-serif;
-    color:black;
-    width: 33vw;
-}
-
-.indexes_table_th
-{
-    font-weight:bolder;
-    font-family:Verdana, sans-serif;
-    color:black;
-    width: 33vw;
-}
-
-.conclusion_table
-{
-    margin-top: 0px;
-    width: 100vw;   
-}
 
 .button_history
 {
     width: 300px;
-    height: 40px;
+    height: 100px;
     background-color: #13B2BC;
     font-weight:bolder;
     font-family:Verdana, sans-serif;
@@ -115,21 +85,4 @@
 
 }
 
-.conclusion_result
-{
-    color: red;
-    margin: 0;
-}
-tr td
-{
-    border: 3px solid #13D8E4; 
-    padding: 8px;
-    text-align: left;
-}
 
-tr th
-{
-    border: 3px solid #13D8E4; 
-    padding: 8px;
-    text-align: left;
-}
