--- a/lifetrack.client/src/pages/Patients.css
+++ b/lifetrack.client/src/pages/Patients.css
@@ -34,19 +34,17 @@
     color: #ffffff;
 }
 
-.circle
-{
-    margin-top: 2px;
-    margin-left: 30px;
+.circle {
+    margin: 2px 20px 0 25px;
     border-radius: 50px;
     width: 65px;
     height: 65px;
-    background-color: white;
 }
 
 .flex
 {
     display: flex;
+    align-items: center;
 }
 
 .links {
