--- a/lifetrack.client/src/pages/Patient_history.css
+++ b/lifetrack.client/src/pages/Patient_history.css
@@ -2,14 +2,14 @@
 {
     width: 99vw;
     height: 89vh;
-    background-color: #13D8E4;
+    background-color: lightcyan;
     margin-left: 7px;
     margin-top: 77px;
 }
 
 .history_reports
 {
-    color: white;
+    color: darkcyan;
     margin-top: 0px;
     margin-bottom: 10px;
 }
@@ -23,21 +23,54 @@
 {
     width: 100vw;
     height: 40vh;
-    margin: 0px;
+    margin-left: 0px;
     text-align: right;
 }
 
-.history_reports_out_button
-{
-    margin-top: 10px;
-    margin-right: 30px;
+.history_reports_out_button {
     background-color: #13B2BC;
-    font-weight:bold;
-    font-family:Verdana, sans-serif;
+    font-weight: bold;
+    font-family: Verdana, sans-serif;
     font-size: 20px;
-    color:white;
+    color: white;
     border: 0;
-    border-radius: 50px;
+    border-radius: 25px;
     width: 200px;
     height: 40px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    
+}
+
+.place-ckeck-graph {
+    display: flex;
+    align-items: center;
+}
+
+.checkbox-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 70px; 
+    font-size: 24px;
+}
+
+.checkbox-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+    .checkbox-item input {
+        margin-right: 5px;
+    }
+
+.chart-container {
+    width: 1300px;
+}
+
+.button-place {
+    margin-top: 20px;
+    display: flex;
+    align-items: flex-end;
 }
