--- a/lifetrack.client/src/pages/Patient_history.css
+++ b/lifetrack.client/src/pages/Patient_history.css
@@ -42,6 +42,13 @@
     
 }
 
+.circle {
+    margin: 2px 20px 0 25px;
+    border-radius: 50px;
+    width: 65px;
+    height: 65px;
+}
+
 .place-ckeck-graph {
     display: flex;
     align-items: center;
