--- a/lifetrack.client/src/pages/Patient.css
+++ b/lifetrack.client/src/pages/Patient.css
@@ -14,6 +14,10 @@
     margin-top: 9px;
 }
 
+.info-label {
+    font-weight: bold;  
+}
+
 .links {
     margin-inline: auto;
     margin-top: 10px;
