--- a/lifetrack.client/src/pages/Analysis.css
+++ b/lifetrack.client/src/pages/Analysis.css
@@ -29,16 +29,17 @@
 
 .button-place {
     position: fixed;
-    bottom: 20px; /* Встановіть відступ від нижнього краю, який вам подобається */
+    bottom: 20px; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
     right: 20px;
 }
 
 .result-text {
+    font-weight: bold;
     text-align: left;
     padding: 20px;
     padding-bottom: 100px;
 }
 
 .indicator-name{
-    font-weight: bold;
+    font-size: 25px;
 }
